--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "@vitejs/plugin-vue": "^3.0.3",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
+    "autoprefixer": "^10.4.12",
     "eslint": "^8.22.0",
     "eslint-plugin-vue": "^9.3.0",
+    "postcss": "^8.4.18",
     "prettier": "^2.7.1",
+    "tailwindcss": "^3.1.8",
     "vite": "^3.0.9"
   }
 }
